# unity-cli

./: Cargo.toml  LICENSE
common/: Cargo.toml
common/src/: lib.rs
ucli/: Cargo.toml
ucli-server/: Cargo.toml
ucli-server/src/: lib.rs
ucli-server/tests/: main.rs
ucli/src/: cli_args.rs  lib.rs  main.rs  service_discovery.rs  terminal.rs
