[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

[features]
async = ["dep:tokio-util"]
sync = []

[dev-dependencies]
common = { path = ".", features = ["async", "sync"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
