[package]
name = "ucli-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1"
common = { path = "../common", features = ["async"] }
dashmap = "5.4"
futures = "0.3"
gethostname = "0.4"
mdns-sd = { git = "https://github.com/ShoyuVanilla/mdns-sd.git", rev = "e3be0c744e3918eb913f6f7bbe76703d302e6fe3" }
names = "0.14"
once_cell = "1.17"
parking_lot = "0.12"
socket2 = "0.5"
tokio = { version = "1.28", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "time", "smallvec", "parking_lot"] }
uuid = { version = "1.3", features = ["v4", "fast-rng"] }

[dev-dependencies]
common = { path = "../common", features = ["async", "sync"] }
